# NxEngine

./: .gitignore  CMakeLists.txt  Git-Pull.sh  README.md  Unix-Build.sh  Unix-Clean.sh  Win-Build-VS-17.bat  Win-Build-VS-19.bat  Win-Build-VS-22.bat  Windows-GenVS-17.bat  Windows-GenVS-22.bat  Windows-GenVisualStudioProject.bat  Xcode-Gen.sh  imgui.ini  linux_clang_build.sh
BuildScripts/Release/Unix/: Unix-Build.sh
BuildScripts/Release/Windows/: Win-Build-VS-17.bat
Config/: root_directory.h.in
Config/Settings/: Settings.json
res/Backup/: TestScene.json  def.json
res/Scenes/: DefScene.json  TestScene.json  TestSceneRTT.json  TestSceneRTT_NEW - Copy.json  TestSceneRTT_NEW.json  testReflection.json
res/models/: PBRSphere3.gltf  PBRTest.glb  akTest.fbx  pistol_bullet.glb  pistol_test.glb
res/models/animations/: sad_idle_anim_OLD.fbx  shoot_anim.fbx
res/models/dust/gltf/: dust2test.gltf
res/shaders/: DebugShapeShader.glsl  EditorGridShader.glsl  EditorGridSimpleShader.glsl  ImpostorShader.glsl  LineShader.glsl  ScreenShader.glsl  basicShader.glsl
res/shaders/PBR/: brdf.glsl  eqToCube.glsl  irConv.glsl  main_skinned.glsl  pbr.glsl  prefilter.glsl  skybox.glsl  worldCapture.glsl
res/shaders/PostFX/: Chroma.glsl
src/: EditorRenderContext.cpp  EditorRenderContext.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  main.cpp
src/Common/: Common.h  CommonTypes.h  NxGlobal.cpp  NxGlobal.h
src/Common/Input/: InputTypes.h
src/Common/Math/: Math.cpp  Math.h
src/Common/Transform/: Transform.cpp  Transform.h
src/Common/dataStructs/: Array.h  Map.h  NxArray.h  String.cpp  String.h
src/Core/Application/: Application.cpp  Application.h
src/Core/Application/AssetManager/: AssetManager.cpp  AssetManager.h
src/Core/Application/SceneManager/: GameObject.cpp  GameObject.h  SceneManager.cpp  SceneManager.h  cSceneManager.cpp  cSceneManager.h
src/Core/Application/Settings/: GlobalSetting.cpp  GlobalSettings.h
src/Core/Camera/: Camera.cpp  Camera.h
src/Core/Components/: LightComponent.h  RenderComponent.h  StaticMeshComponent.h  TransformComponent.h
src/Core/Components/AnimatorComponent/: AnimatorComponent.cpp  AnimatorComponent.h
src/Core/Components/Character/: CharacterComponent.cpp  CharacterComponent.h
src/Core/Components/Impostor/: ImpostorComponent.h
src/Core/Components/Input/: InputComponent.h
src/Core/Components/LightComponent/: LightComponent.cpp  LightComponent.h
src/Core/Components/Physics/: RigidBodyComponent.cpp  RigidBodyComponent.h
src/Core/Components/SkinnedMeshComponent/: SkinnedMeshComponent.cpp  SkinnedMeshComponent.h
src/Core/Components/StaticMeshComponent/: StaticMeshComponent.cpp  StaticMeshComponent.h
src/Core/Components/TransformComponent/: TransformComponent.cpp  TransformComponent.h
src/Core/ECS/: Component.cpp  Component.h  ECS.cpp  ECS.h  System.cpp  System.h
src/Core/Engine/Component/: BaseComponent.cpp  BaseComponent.h
src/Core/Engine/Console/: NxConsole.cpp  NxConsole.h
src/Core/Engine/Registry/: Registry.h
src/Core/Engine/Serialization/: JSON.cpp  JSON.h
src/Core/FileSystem/: FileSystem.cpp  FileSystem.h
src/Core/Game/: Game.cpp  Game.h
src/Core/Graphics/Animation/: AnimationInfo.cpp  AnimationInfo.h
src/Core/Graphics/Cubemap/: Cubemap.cpp  Cubemap.h  CubemapManager.cpp  CubemapManager.h  CubemapRenderTarget.cpp  CubemapRenderTarget.h
src/Core/Graphics/DebugRenderer/: DebugRenderer.cpp  DebugRenderer.h  DebugShape.h
src/Core/Graphics/LineRenderer/: LineRenderer.h
src/Core/Graphics/Material/: Material.cpp  Material.h
src/Core/Graphics/Mesh/: MeshInfo.cpp  MeshInfo.h
src/Core/Graphics/PostFX/: ChromaticAberration.h  PostFX.h
src/Core/Graphics/PrimitiveGenerator/: PrimitiveGenerator.h
src/Core/Graphics/Texture/: Texture.cpp  (+1 more)
src/Core/Input/: InputManager.cpp  InputManager.h
src/Core/Physcis/: GL_Triangle.h  eShapeType.h  iDebugRenderer.h  iPhysicsFactory.h  iPhysicsWorld.h  iRigidBody.h  iShape.h  iSoftBody.h  iWreckingBallPhysics.h  sRigidBodyDef.h  sSoftBodyDef.h  shapes.h
src/Core/Systems/: LineRenderSystem.h  RenderSystem.h
src/Core/Time/: NxTime.cpp  NxTime.h
src/Editor/: EditorRenderContext.cpp  EditorRenderContext.h
src/Editor/EditorUI/: EditorUI.cpp  EditorUI.h
src/common/: Common.h  CommonTypes.h  Transform.h
src/common/Transform/: Transform.h
src/common/dataStructs/: String.cpp  String.h
src/core/: Window.hpp
src/platform/: PlatformRenderDevice.h  platformWindow.h
src/platform/glfw/: GLFWPlatformWindow..cpp  GLFWPlatformWindow.cpp  GLFWPlatformWindow.h
src/platform/opengl/: OpenGLRenderDevice.cpp  OpenGLRenderDevice.h
src/rendering/: ArrayBitmap.cpp  ArrayBitmap.h  AssetLoader.cpp  AssetLoader.h  IndexedModel.cpp  IndexedModel.h  Material.h  Mesh.cpp  Mesh.h  RenderContext.h  RenderDevice.h  RenderTarget.h  Sampler.h  Shader.h  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray  VertexArray.cpp  VertexArray.h  Window.h
(+24 files in other folders)
